infrastructure/configs/oauth2-proxy/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubeflow-oauth2-http
  namespace: oauth2-proxy
spec:
  parentRefs:
    - name: luzero-gateway
      namespace: istio-system
      sectionName: http
  hostnames:
    - "kubeflow.luzero.online"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /oauth2
      backendRefs:
        - name: oauth2-proxy
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubeflow-oauth2-https
  namespace: oauth2-proxy
spec:
  parentRefs:
    - name: luzero-gateway
      namespace: istio-system
      sectionName: https
  hostnames:
    - "kubeflow.luzero.online"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /oauth2
      backendRefs:
        - name: oauth2-proxy
          port: 80
